GNOME Bugzilla – Bug 791069
log failing OMX calls as errors
Last modified: 2018-01-29 17:48:40 UTC
.
Created attachment 364743 [details] [review] log failing OMX calls as errors I find it confusing when debugging that OMX calls returning an error where not logged as GST_LEVEL_ERROR making them harder to spot. Fix this by introducing simple log macros checking the return value of the OMX call and logging failures as errors.
Review of attachment 364743 [details] [review]: Ok, it's will be possibly spammy in some corder cases, but I think it's generally useful, so let's pay the cost of having to fix the spammy cases later.
Attachment 364743 [details] pushed as 0f702d0 - log failing OMX calls as errors